EmissionFactorMatching/objects/NZC_EmissionsMatchingTDCloning__mdt.object
<CustomObject>
    <description>Used to select objects and fuel types to clone records for and allocation to T &amp; D losses.</description>
    <fields>
        <fullName>FieldsToClone__c</fullName>
        <description>Comma separated list of API field names to clone when creating the T&amp;D record</description>
        <inlineHelpText>Comma separated list of API field names to clone when creating the T&amp;D record</inlineHelpText>
        <label>Fields to Clone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FuelType__c</fullName>
        <description>Fuel type that should be converted for TD losses</description>
        <inlineHelpText>Fuel type that should be converted for TD losses</inlineHelpText>
        <label>Fuel Type</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The Object API name this rule applies to</description>
        <inlineHelpText>The Object API name this rule applies to</inlineHelpText>
        <label>Object Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NZC_EmissionsMatchingTDCloning</label>
    <pluralLabel>NZC_EmissionsMatchingTDCloning</pluralLabel>
</CustomObject>